--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             display: flex;
-            flex-direction: column; /* Изменено на column для размещения надписи над формой */
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -18,7 +18,7 @@
         h1 {
             text-align: center;
             color: #333;
-            margin-bottom: 20px; /* Отступ между надписью и формой */
+            margin-bottom: 20px;
         }
         form {
             background: #fff;
@@ -51,10 +51,18 @@
         input[type="submit"]:hover {
             background-color: #0056b3;
         }
+        #notification {
+            display: none; /* Скрываем уведомление по умолчанию */
+            margin-top: 20px; 
+            padding: 10px; 
+            border-radius: 5px; 
+            color: white; 
+            background-color: #28a745; /* Зеленый цвет для успешных уведомлений */
+        }
     </style>
 </head>
 <body>
-    <h1>Форма заявки</h1> <!-- Надпись "Форма" -->
+    <h1>Форма заявки</h1>
     
     <form id="requestForm" action="/src/submit.php" method="POST">
         <label for="name">Имя:</label>
@@ -74,20 +82,36 @@
         <input type="submit" value="Отправить">
     </form>
 
+    <div id="notification"></div> <!-- Блок для уведомлений -->
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         // Отслеживание времени нахождения на странице
         let startTime = new Date().getTime();
-        window.onload = function() {
-            document.getElementById('requestForm').onsubmit = function() {
+        
+        $(document).ready(function() {
+            $('#requestForm').on('submit', function(event) {
+                event.preventDefault(); // Предотвращаем стандартное поведение формы
+
+                // Установка времени нахождения на странице
                 let currentTime = new Date().getTime();
                 let timeSpent = Math.floor((currentTime - startTime) / 1000);
-                if (timeSpent > 30) {
-                    this.time_spent.value = 1;
-                } else {
-                    this.time_spent.value = 0;
-                }
-            };
-        };
+                this.time_spent.value = timeSpent > 30 ? 1 : 0;
+
+                // Отправка данных формы через AJAX
+                $.ajax({
+                    url: '/src/submit.php', // Укажите путь к вашему PHP-скрипту
+                    type: 'POST',
+                    data: $(this).serialize(), // Сериализуем данные формы
+                    success: function(response) {
+                        $('#notification').html('<p>' + response + '</p>').fadeIn().delay(5000).fadeOut(); // Показываем уведомление на 5 секунд
+                    },
+                    error: function(xhr, status, error) {
+                        $('#notification').html('<p>Произошла ошибка при отправке данных.</p>').fadeIn().delay(5000).fadeOut();
+                    }
+                });
+            });
+        });
     </script>
 </body>
 </html>
